@@ -22,6 +22,10 @@
 
 [% USE CGI %]
 
+[% IF navbar_on_home_page %]
+  [% INCLUDE navbar.tt %]
+[% END %]
+
 <div id="header">
 <h1>[% site_name %] - [% node_name %]</h1>
 </div>
